--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths":{
+      "@components/*": ["src/components/*"]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -16,5 +19,5 @@
       "es2018",
       "dom"
     ]
-  }
+  },
 }
